# artemis

./: .env.example  .gitignore  AI-Quant-Binance-Bot-Blueprint-v2.1.md  AI-Quant-Binance-Bot-Blueprint-v2.md  AIQ-DESIGN-SYSTEM-BLUEPRINT.md  BINANCE-TO-BYBIT-MIGRATION.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation.py  0002_app_settings.py  0003_market_data_foundation.py  0004_orderbook_snapshots.py  0005_execution_intents.py  0006_execution_lifecycle_fields.py  0007_execution_order_ids.py  0008_execution_venue_events.py  0009_spot_account_balances.py  0010_spot_symbol_positions.py  0011_spot_order_fill_states.py  0012_spot_position_pnl_fields.py  0013_execution_intent_replacements.py  0014_spot_execution_fills.py  0015_fill_attribution.py  0016_daily_digest_runs.py  0017_spot_position_lots.py  0018_spot_execution_fill_lot_closes.py  0019_ai_analyst_runs.py  0020_backtest_runs.py  0021_ai_review_recovery.py
backend/app/: autonomous_bot.py  config.py  db.py  deps.py  main.py  redis.py
backend/app/core/: crypto.py  logging.py  rate_limit.py  runtime_settings.py  security.py  sessions.py
backend/app/models/: __init__.py  audit.py  market_data.py  setting.py  user.py
backend/app/routers/: __init__.py  ai_analyst.py  auth.py  backtest.py  dashboard.py  edge.py  health.py  (+8 more)
backend/services/: audit.py  risk_manager.py
backend/strategies/: advanced_engine.py  autonomous_bot.py  base.py  dynamic_risk_manager.py  indicators.py
(+117 files in other folders)
