[project]
name = "aiq-bot-backend"
version = "0.1.0"
description = "AI-Quant Binance Bot backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0",
  "asyncpg>=0.29.0",
  "cryptography>=43.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "pydantic-settings>=2.3.4",
  "pyjwt>=2.8.0",
  "pyotp>=2.9.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.0",
  "redis>=5.0.7",
  "sqlalchemy[asyncio]>=2.0.31",
  "structlog>=24.2.0",
  "uvicorn[standard]>=0.30.1",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "mypy>=1.10.1",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "types-PyYAML>=6.0.12.20240917",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "services*", "strategies*", "backtest*", "execution_quality*"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
